[JVMCI] compiler/jvmci/events/JvmciNotifyInstallEventTest.java fails with NoClassDefFound

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b131

      ----------messages:(4/649)----------
      command: main -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -Xbootclasspath/a:. -Xmixed -XX:+UseJVMCICompiler -XX:-BootstrapJVMCI -Dcompiler.jvmci.events.JvmciNotifyInstallEventTest.failoninit=false compiler.jvmci.events.JvmciNotifyInstallEventTest
      reason: User specified action: run main/othervm -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -Xbootclasspath/a:. -Xmixed -XX:+UseJVMCICompiler -XX:-BootstrapJVMCI -Dcompiler.jvmci.events.JvmciNotifyInstallEventTest.failoninit=false compiler.jvmci.events.JvmciNotifyInstallEventTest
      Mode: othervm [/othervm specified, test or library overrides a system module]
      elapsed time (seconds): 0.578

      ----------System.out:(0/0)----------
      ----------System.err:(2/140)----------
      java.lang.NoClassDefFoundError: jdk/vm/ci/hotspot/HotSpotCompiledCode
      java.lang.NoClassDefFoundError: jdk/vm/ci/hotspot/HotSpotCompiledCode

            Assignee:
            Douglas Simon
            Reporter:
            Rickard Backman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: